Add component for home section

--- a/src/template.html
+++ b/src/template.html
@@ -16,11 +16,11 @@
   </header>
   <div id="content" class="container">
 
-    <section class="home-section">
+    <!-- <section class="home-section">
       <h1 class="home__title">coming soon.</h1>
-    </section>
+    </section> -->
 
-    <section class="menu-section">
+    <!-- <section class="menu-section">
       <h1 class="menu__title">our menu</h1>
       <div class="menu__grid">
         <div class="menu__item item-1">something delicious.</div>
@@ -30,12 +30,13 @@
         <div class="menu__item item-5">something delicious.</div>
         <div class="menu__item item-6">something delicious.</div>
       </div>
-    </section>
+    </section> -->
 
           <!-- <img src="./phone.svg" alt="phone"> -->
           <!-- <img src="./location.svg" alt="location.svg"> -->
           <!-- <img src="./mail.svg" alt="mail"> -->
-    <section class="contact-section">
+
+    <!-- <section class="contact-section">
       <div class="contact__title">contact us!</div>
       <div class="contact__wrapper">
         <div class="contact__item">
@@ -54,7 +55,7 @@
           <span>email@address.com</span>
         </div>
       </div>
-    </section>
+    </section> -->
 
   </div>
 </body>
