Add contact section and integrate button clicks

--- a/src/template.html
+++ b/src/template.html
@@ -10,7 +10,7 @@
     <div class="logo">someRestaurant</div>
     <nav>
       <button class="home">home</button>
-      <button class="menu active">menu</button>
+      <button class="menu">menu</button>
       <button class="contact">contact</button>
     </nav>
   </header>
